# video-app1

./: CMakeLists.txt  README.md  techstack.md  techstack.yml
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp
